[project]
name = "ml-algorithms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==6.30.1",
    "matplotlib>=3.10.6",
    "numpy==2.3.3",
    "scikit-learn==1.7.2",
    "tqdm==4.66.1",
]

[tool.uv.workspace]
members = [
    "algorithms/linear_regression_algorithm",
]
